mule-user-guide/v/3.3/mule-credentials-vault.adoc
=  Mule凭证库

使用*Mule Credentials Vault*加密`.properties`文件中的数据。 （在本文档中，我们将`.properties`文件简称为属性文件。）

Mule中的属性文件将数据存储为键值对，其中可能包含诸如用户名，名和姓以及信用卡号等信息。 Mule应用程序可以在处理消息时访问此数据，例如，获取外部Web服务的登录凭证。但是，尽管这些敏感的私人数据必须存储在一个供Mule访问的属性文件中，但它也必须受到保护，以防止任何有权访问Mule应用程序的人员进行未经授权的和可能的恶意使用。你如何保护属性文件中的数据，同时仍然可以将它提供给Mule？使用三种成分：

. 为*Mule Credentials Vault*
. 全球*Secure Property Placeholder*元素
.  a *key*解锁库

[NOTE]
在Mule Enterprise Security环境中，存储加密属性的属性文件称为*Mule Credentials Vault*。

== 它是如何工作的

想象一下，开发人员负责为人力资源部门设计一个Mule应用程序，该应用程序必须访问安全的私人员工信息数据库。 HR员工 -  Mule应用程序的授权最终用户 - 提交信息请求，例如员工的基本工资，而Mule应用程序必须访问安全数据库才能检索信息。如果没有有效的登录凭证，则无法访问此HR数据库，因此开发人员必须设计Mule应用程序来访问数据库，但保留数据库登录凭证的机密性。

首先，开发人员设计应用程序以处理HR最终用户请求，其中包括对安全数据库的调用。然后，他创建一个*Mule Credentials Vault*来存储数据库登录凭据或属性。在Mule Enterprise Security环境中，存储加密属性的属性文件是凭证保险库。当他将数据添加到属性文件时，Mule给了他加密数据的选项。他选择了一种加密算法（可用的19种），然后输入加密密钥。该加密密钥是解密属性文件中属性的唯一方法。换句话说，加密密钥是唯一可以解锁凭证保险库的东西。

接下来，创建一个定位凭证保险库（即属性文件）的全局*Secure Property Placeholder*元素，然后检索加密的属性。但是，如果安全属性占位符拥有密钥，则它只能访问凭证保险库（即解密数据）。

现在他拥有数据库中的数据和一种请求数据的机制，但解锁数据库（即解密数据）的关键在哪里？开发人员如何确保访问该应用程序的每个人都无法访问密钥？如果他只是将密钥硬编码到全局安全属性占位符的配置中，任何可以访问该应用程序的同事都可以简单地读取密钥并解锁该保管库。因此，开发人员将安全属性占位符配置为使用Mule在运行时从用户收集的密钥（请参阅下面的代码）。在此情况下，解密属性的密钥将成为运行时密码。

[source, xml, linenums]
----
<secure-property-placeholder:config key="${prod.key}" location="test.${env}.properties"/>
----

在运行时（即，当您在本地或云中运行Mule应用程序时），Mule要求用户（例如操作管理员）输入一个密钥，该密钥存储在内存中。回想一下，Mule在运行时要求的关键是_same key_开发人员用于加密凭证保险库中的属性;这种情况下的开发人员必须手动将密钥提供给负责运行应用程序的人员，例如Ops Admin。只要Mule应用程序中的安全属性占位符必须解锁凭证保险库以检索HR数据库登录凭据，它才会使用Ops Admin在运行时输入的密钥。方便的话，Mule会记住Ops Admin会话期间的密钥，以避免每次Mule在Vault中解密一个属性时都需要密钥。但是，当Ops Admin结束Mule会话（即终止应用程序）时，Mule丢弃该密钥。

要配置Mule以要求用户在运行时输入密钥，开发人员在系统属性（`src>main>app`文件夹中的`mule-app.properties`文件）中包含以下内容：

[source, code, linenums]
----
-M-Dprod.key=uniquepassword -M-Denv=prod
----

当需要密钥解密属性文件的内容时，安全属性占位符会询问Mule的系统属性文件，该文件使用Ops Admin输入的内存中的密钥。

== 占位符，键和保管库

在Mule中，您可以设置Placeholder-Vault-Key关系的多种变体。

[NOTE]
本主题介绍全球元素的概念;如果您不熟悉此功能，请在继续之前访问 link:/mule-user-guide/v/3.3/understand-global-mule-elements[了解全球骡子元素]以了解更多信息。

====  *One-to-One-to-One Relationship*

第一种变化是简单的一对一关系，如下图所示。 +
一个全局安全属性占位符的配置要求使用一个密钥来解锁一个凭证保险库。 （换句话说，一个密钥会解密一个属性文件中的属性。）在运行时使用密钥解锁和解密，任何必须访问属性文件中的数据的流都可以这样做。

image:one-one-one.png[一一一]

====  **One-to-One-to-Many Relationship**

第二种变化是一对一的关系，如下图所示。 +
一个全局安全属性占位符的配置要求使用一个密钥来解锁许多凭证库。 （换句话说，一个密钥会解密许多属性文件中的属性。）在运行时使用密钥解锁和解密，任何必须访问任何属性文件中的数据的流都可以这样做。 +

image:one-one-many.png[一一对多]

====  *Multiple One-to-One-to-One Relationships*

只要为每个属性文件分配了不同的键，就会创建一个需要多个一对一关系的情况。如下图所示，每个全局安全属性占位符仅使用一个密钥，而该密钥反过来只解锁一个凭证保险库。 （换句话说，每个密钥只能解密一个属性文件中的属性。）在运行时使用多个密钥解锁和解密，任何必须访问任何属性文件中的数据的流都可以这样做。 +

image:multiple-one-one.png[多一对一]

== 使用Mule凭证保险库

要使用Mule凭证保险库，您必须执行三项任务：

. 加密属性文件中的属性
. 在您的Mule应用程序中创建一个全局安全属性占位符，以使用Mule在运行时收集的加密密钥
. 配置Mule的系统属性文件以在运行时请求密钥

以下各节介绍如何完成这三项任务。

==== 加密属性

[tabs]
------
[tab,title="STUDIO Visual Editor"]
....
. In Studio, right click the `src/main/resources` folder, then select *New* > *File*.
. In the *New File* wizard, enter a *Filename*, including the `.properties` extension. For example, `test.properties`.
. Click *Finish*. Studio saves the new, blank file in your project and opens a new window in a *Properties File Editor* window.  +

+
image:test_properties2.png[test_properties2] +
+

. Click the error icon in the `.properties` tab to close the Properties File Editor window.

. In the Package Explorer, right-click the `.properties` file, then select *Open With* > *Mule Properties Editor*.
. Click the green image:add.png[(plus)] icon in the Studio toolbar (see image below) to open the *Add a new property* dialog.  +


+
image:add_new_prop.png[add_new_prop] +
+

. Add the key-value pair (property) you wish to record in the properties file.  +

+
image:add_key-value.png[add_key-value] +
+

. If you want to save the property as an unencrypted key-value pair, simply click *OK* to add the new property to the properties file. Essentially, this produces an unencrypted properties file. However, if you wish to encrypt the properties file (i.e. create a Credentials Vault), click the *Encrypt* button.
. Studio opens a **Setup encryption information **dialog, in which you: +
* select the type of *algorithm* you wish to use to encrypt the value
* enter the *key* that Mule will require when asked to decrypt the value 
+

[TIP]
*Don't Forget the Key!* +
 +
The key that you enter to encrypt the properties file is the _same key_ that the administrator enters at runtime. Be sure to keep this key secure and pass it to the administrator(s) who will deploy and run your Mule application.


+
image:setup_encryption.png[setup_encryption] +
+

. Click *OK* to complete the encryption.
. In the *Add a new property* dialog, Studio displays the encrypted value in the *Value* field (see below). Click *OK* to save the property.  +

+
image:encrypted_value.png[encrypted_value] +
+

. Repeat steps 6 - 11 to add many properties to your Credentials Vault.   +
Note that the first time you add an encrypted a property to a properties file, Mule demands that you enter the key. The next time you add an encrypted property to the same properties file, Mule uses the key you entered and does not demand it again. Mule remembers the key (in-memory store) for the duration of your Studio session; when you end your session (i.e. close Studio), Mule "forgets" the key. +

[TIP]
====
You can add unencrypted properties to a properties file. In the properties file, an encrypted property is indecipherable, but recognizable by its wrapper.

[cols="2*"]
|===
|encrypted property |`Username=![r8weir09458riwe0r9484oi]`
|unencrypted property |`Username=Aaron Martinez`
|===
====
....
[tab,title="XML Editor or Standalone"]
....
Encrypt the properties in your `.properties` file.

[TIP]
*Don't Forget the Key!* +
 +
The key that you use to encrypt the properties file is the _same key_ that the administrator enters at runtime. Be sure to keep this key secure and pass it to the administrator(s) who will deploy and run your Mule application.
....
------

==== 设置全局安全属性占位符

[tabs]
------
[tab,title="STUDIO Visual Editor"]
....
. In Studio, create a new global *Secure Property Placeholder* element.
. Configure the field values of the global element according to the table below. 

+
image:global_secure.png[global_secure]
+
[%header%autowidth.spread]
|===
|Field |Req'd |Value
|*Name* |x |A unique name for your global secure property placeholder.
|*Key* |x |the word or phrase to unlock the Credentials Vault according to the system property you define in this field. For example, `${runtime.property`} instructs Mule to demand the key at runtime.
|*Location* |  |The name of the properties file that the key unlocks.
|*Encryption Algorithm* |  |The type of algorithm you used to encrypt the content of the Credentials Vault.
|*Encryption Mode* |  |The procedure that allows Mule to repeatedly use a block cipher with a single key.
|===
....
[tab,title="XML Editor or Standalone"]
....
. Create a new global secure-property-placeholder:config element in your config file, set above all the flows in the application.
. Configure the attributes of the global element according to the table below. 

[source, xml, linenums]
----
<secure-property-placeholder:config name="Secure_Property_Placeholder" key="${runtime.property}" location="test.properties" encryptionAlgorithm="Blowfish" doc:name="Secure Property Placeholder"/> 
----

[%header%autowidth.spread]
|===
|Attribute |Req'd |Value
|*name* |x |A unique name for your global secure property placeholder.
|*key* |x |the word or phrase to unlock the Credentials Vault according to the system property you define in this field. For example, `${runtime.property`} instructs Mule to demand the key at runtime.
|*location* |  |The name of the properties file that the key unlocks.
|*encryptionAlgorithm* |  |The type of algorithm you used to encrypt the content of the Credentials Vault. +
[TIP]
--
The algorithms supported are:

* AES
* Blowfish
* Camelia
* CAST5
* CAST6
* DES
* DESede
* Noekeon
* RC3
* RC5
* RC6
* Rijndael
* RSA
* SEED
* Serpent
* Skipjack
* TEA
* Twofish
* XT
--
|*encryptionMode* |  |The procedure that allows Mule to repeatedly use a block cipher with a single key. +
[TIP]
--
The modes supported are:

* CBC
* CFB
* ECB
* OFB
--
|*doc:name* |  |A display name for the element in Studio's Visual Editor. Not applicable for Standalone.
|===
....
------

==== 配置Mule来请求密钥

[tabs]
------
[tab,title="STUDIO Visual Editor"]
....
. In Studio, access the `src>main>app` folder, then double-click the `mule-app.properties` file to open it.
. To this system properties file, add code which instructs Mule to demand that the user enter a key at runtime, and store that key in-memory (see sample code below).
+

[source, code, linenums]
----
-M-Dprod.key=uniquepassword -M-Denv=prod
----

. Save your changes to the file, then close.
. When you start Mule, provide the key to decrypt the properties file.
+

[source, code, linenums]
----
./mule -M-Dprod.key.property=uniquePassword
----
....
[tab,title="XML Editor or Standalone"]
....
. Open your project's `mule-app.properties` file.
. To this system properties file, add code which instructs Mule to demand that the user enter a key at runtime, and store that key in-memory (see sample code below).
+

[source, code, linenums]
----
-M-Dprod.key=uniquepassword -M-Denv=prod
----

. Save your changes to the file, then close.
. When you start Mule, provide the key to decrypt the properties file.
+

[source, code, linenums]
----
./mule -M-Dprod.key.property=uniquePassword
----
....
------

== 用例示例

一家公司已经构建了一个连接到Salesforce API的Mule应用程序。该应用程序为其所有用户存储Salesforce登录凭据。开发应用程序的开发人员必须能够测试Salesforce连接功能，但不能访问用户的Salesforce帐户信息。因此，该应用程序有两个属性文件，一个用于应用程序的生产环境，另一个用于开发人员测试功能。

*  test.prod.properties（Salesforce生产环境的关键）
*  test.dev.properties（沙箱环境）

test.prod.properties文件将加密内容存储在Mule凭证库中; test.dev.properties文件将未加密的信息存储在属性文件中。在运行时，Mule行为因环境而异。

* 在生产中的运行时，Mule应用程序需要一个用于解锁凭证保险库的密钥，以便应用程序中的Mule流可以利用凭证保险库中的属性登录到Salesforce（请参阅安全属性下面的占位符配置）。 secure-property-placeholder元素自动标识环境（env）并访问Mule凭证库（test.prod.properties文件）获取正版凭证
+

[source, xml, linenums]
----
<secure-property-placeholder:config key="${prod.key}" location="test.${env}.properties"/>
----

* 在沙盒中运行时，Mule应用程序不需要密钥，因为`test.dev.properties`文件未加密。 secure-property-placeholder元素自动标识环境（env）并访问test.dev.properties文件以获取伪造凭证

由于开发人员没有`prod.key`值（即运行时密码，也是访问凭证保险库的关键），因此他们无法访问`test.prod.properties`文件中的安全Salesforce登录凭据。唯一知道`prod.key`的人是将应用程序部署到生产环境中的运营团队负责人。

当Ops Team Lead启动Mule时，Mule要求他输入凭证保险库的`prod.key`（请参阅下面的命令）。 Mule接受`prod.key`在Ops Team Lead的Mule会话期间有效。当他退出申请时，穆勒忘记了`prod.key`。

[source, code, linenums]
----
./mule -M-Dprod.key=uniquepassword -M-Denv=prod
----

== 另请参阅

* 访问演示Mule Enterprise Security的 link:/mule-user-guide/v/3.3/anypoint-enterprise-security-example-application[示例应用]。
